web/css/fc_styles.css
/* ... */
.alert p {
	font-size:12px;
}
#worktasks tr td a.btn-inside-panels {
	width: 100%;
	text-align: center;
	font-size: 13px;
}

span.fa-user{
	margin-top:3px;
}

.reg-complete-summary-left-bar {
	margin-left: -15px;
}

.reg-complete-wrapper {
	padding:10px;
}

.reg-complete-text {
	float:left;
	width: 50%;
}

.reg-complete-buttons {
	float:right;
}

.reg-complete-buttons p {
	font-weight: bold;
}

.reg-complete-buttons ul {
	list-style-type: none;
}

.reg-complete-buttons ul li {
	margin-left: -40px;
	margin-bottom: 5px;
}

.reg-complete-buttons ul li a {
	width:100%;
	text-align: center;
}

.document-upload.summary {
	overflow:hidden;
	margin-top: 20px;
	padding:5px;
}

span.circleBg {
	background: #d8d8d8;
	-moz-border-radius :70px;
	-webkit-border-radius :70px;
	border-radius :70px;
	position:relative;
	left:8px;
}


i.documents-incomplete {
	display:none;
}

i.documents-complete {
	color: #1baf37;
	margin-left:3px;
	margin-right:4px;
}

#flow-btn-back  {
    float:left;
}

#ffg_venue td {
	font-size: 13px;
}
#ffg_venue td input[type="text"] {
	width: 100%;
	padding: 5px 0px;
}
#ffg_venue td select {
	width: 100%;
	border: 1px solid #cccccc;
}

